<resources>

    <string-array name="categories">
        <item>Clothes</item>
            <item>Carpets</item>
            <item>Herbs</item>
            <item>Food</item>
        <item>Tours</item>
        <item>Others</item>

    </string-array>

    <string name ="addproduct">اضافة منتج</string>
    <string name="app_name">Eshtery Badawy</string>
    <string name="action_settings">اعدادات</string>
    <string name="productname">اسم المنتج</string>
    <string name ="choosecategory">اختر النوع</string>
    <string name="wpn">اكتب مواصفات المنتج</string>
    <string name="ShortDescription">نبذه عن المنتج</string>
    <string name="wdh">اكتب الوصف هنا</string>
    <string name="email">بريد اكتروني</string>
    <string name="optionalEmail">البريد الالكتروني (اختياري)</string>
    <string name="specs">خصائص</string>
    <string name ="wd_h">اكتب الخصائص هنا</string>
    <string name="country">الدوله </string>
    <string name="wsp">اكتب الخصائص هنا</string>
    <string name= "address">العنوان</string>
    <string name="writeaddresshere">اكتب العنوان هنا</string>
    <string name="addpb">اضف منتج</string>
    <string name="specsa">خصائص</string>
    <string name="mored">تفاصيل أكثر</string>
    <string name="price">سعر</string>
    <string name="writeproductprice">اكتب سعر المنتج</string>
    <string name="myproducts">منتجاتي</string>
    <string name="clothes">ملابس</string>
    <string name="carpets">سجاد</string>
    <string name="herbs">اعشاب</string>
    <string name="food">مأكولات</string>
    <string name="Tours">رحلات</string>
    <string name="Others">أخري</string>
    <string name="All">الكل</string>
    <string name="contactus">اتصل بنا</string>
    <string name="aboutus">عنا</string>
    <string name="signin"> الدخول</string>
    <string name="register">التسجيل</string>
    <string name="writedescription">اكتب نبذه سريعه</string>
    <string name="Username">اسم المستخدم</string>
    <string name="writeusername">سوف تستخدم هذا الاسم للدخول الي حسابك لاحقا</string>
    <string name="phonenumber">رقم الهاتف</string>
    <string name="writepass">اكتب الرقم السري</string>
    <string name="signup">التسجيل</string>
    <string name="contactinfo">التواصل</string>
    <string name="name">الاسم</string>
    <string name="confirmationoption">طريقة التأكيد</string>
    <string name="phoneCall">اتصال هاتفي</string>
    <string name="Textmessage">رساله نصيه</string>
    <string name="about">\"Eshtery Badawy\" is a project made by Computer Engineering Students of Faculty of Engineering, Alexandria University in August, 2017 under the supervision of\n- Dr Shaimaa Lazem, PhD\n  Assistant Professor, City for Scientific Research and Technological applications (SRTA-City), Egypt. Researcher at Kingston University London.\n- Dr Danilo Giglitto\n   Research Associate at Kingston University London. PhD in Sociology.\n\nThe main idea of the app. is to be the chain link between a bedouin seller and any buyer. It acts as an online bedouin market.\n\nThe app. aims to encourage Bedouin to preserve their Bedouin crafts from fading with time and to give them the chance to share these amazing crafts with each other or with other communities.\n\nTeam Leader: Hesham Medhat\nTeam Members:\nAya Aly\nSajed Hassan\nMohamed Ayman.</string>


</resources>
