<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image4"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/addproduct"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#fff"
                android:textSize="35dp"
                android:textStyle="bold|italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="25dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/product_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/productname"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#f0e68c"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/wpn"
                    android:inputType="text"
                    android:maxLength="30"
                    android:textColor="#fff"
                    android:textColorHint="#fff" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/choosecategory"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#f0e68c"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/catList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">


                </Spinner>


                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/ShortDescription"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#f0e68c"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/writedescription"
                    android:inputType="text"
                    android:maxLength="70"
                    android:textColor="#fff"
                    android:textColorHint="#fff" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/specsa"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#f0e68c"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mored"
                    android:inputType="text"
                    android:maxLength="300"
                    android:textColor="#fff"
                    android:textColorHint="#fff" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/address"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#f0e68c"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/writeaddresshere"
                    android:inputType="text"
                    android:maxLength="50"
                    android:textColor="#fff"
                    android:textColorHint="#fff" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/price"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#f0e68c"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/writeproductprice"
                    android:inputType="text"
                    android:maxLength="10"
                    android:textColor="#fff"
                    android:textColorHint="#fff" />

                <Button
                    android:id="@+id/button_submit"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:onClick="functionUserYaSajed"
                    android:text="@string/addpb" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
